--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# My Exclusions
+DesktopSearch.Core/Bin
+DesktopSearch.Core/Obj
+DesktopSearch.PS/Bin
+DesktopSearch.PS/Obj
+Test/DesktopSearch.Core.Tests/Bin
+Test/DesktopSearch.Core.Tests/Obj
+Test/DesktopSearch.PS.Tests/Bin
+Test/DesktopSearch.PS.Tests/Obj
+
+elasticsearch-*
+packages
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -45,3 +58,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.suo
+*.~vsdx
