--- a/DesktopSearch.Core/DesktopSearch.Core.csproj
+++ b/DesktopSearch.Core/DesktopSearch.Core.csproj
@@ -30,9 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Elasticsearch.Net, Version=2.0.0.0, Culture=neutral, PublicKeyToken=96c599bbe3e70f5d, processorArchitecture=MSIL">
-      <HintPath>..\packages\Elasticsearch.Net.2.4.6\lib\net46\Elasticsearch.Net.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Elasticsearch.Net, Version=5.0.0.0, Culture=neutral, PublicKeyToken=96c599bbe3e70f5d, processorArchitecture=MSIL">
+      <HintPath>..\packages\Elasticsearch.Net.5.0.0\lib\net46\Elasticsearch.Net.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis, Version=1.3.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeAnalysis.Common.1.3.2\lib\net45\Microsoft.CodeAnalysis.dll</HintPath>
@@ -58,9 +57,8 @@
       <HintPath>..\packages\Microsoft.Win32.Primitives.4.3.0\lib\net46\Microsoft.Win32.Primitives.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Nest, Version=2.0.0.0, Culture=neutral, PublicKeyToken=96c599bbe3e70f5d, processorArchitecture=MSIL">
-      <HintPath>..\packages\NEST.2.4.6\lib\net46\Nest.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Nest, Version=5.0.0.0, Culture=neutral, PublicKeyToken=96c599bbe3e70f5d, processorArchitecture=MSIL">
+      <HintPath>..\packages\NEST.5.0.0\lib\net46\Nest.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -204,6 +202,8 @@
     <Compile Include="Extractors\Roslyn\RoslynExtractor.cs" />
     <Compile Include="Extractors\Roslyn\RoslynParser.cs" />
     <Compile Include="Extractors\Roslyn\StringExt.cs" />
+    <Compile Include="Extractors\Tika\TikaRawResult.cs" />
+    <Compile Include="Extractors\Tika\TikaServerExtractor.cs" />
     <Compile Include="Extractors\Xaml\FileReference.cs" />
     <Compile Include="Extractors\Xaml\Helpers\StringExt.cs" />
     <Compile Include="Extractors\Xaml\ParseError.cs" />
@@ -217,6 +217,10 @@
     <Compile Include="Processors\CodeFolderProcessor.cs" />
     <Compile Include="Processors\DocumentFolderProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Extractors\Tika\ExtractionFailureType.cs" />
+    <Compile Include="Extractors\Tika\IndexExtractionException.cs" />
+    <Compile Include="Extractors\Tika\ITikaServer.cs" />
+    <Compile Include="Extractors\Tika\TikaServer.cs" />
     <Compile Include="Utils\Async\AggregatingProgressReporter.cs" />
     <Compile Include="Utils\Async\AsyncLazy.cs" />
     <Compile Include="Utils\Async\AsyncLock.cs" />
@@ -240,6 +244,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DependencyInjection\" />
+    <Folder Include="Tika\" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.1.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
