--- a/DesktopSearch.Core/DesktopSearch.Core.csproj
+++ b/DesktopSearch.Core/DesktopSearch.Core.csproj
@@ -33,6 +33,9 @@
     <Reference Include="Elasticsearch.Net, Version=5.0.0.0, Culture=neutral, PublicKeyToken=96c599bbe3e70f5d, processorArchitecture=MSIL">
       <HintPath>..\packages\Elasticsearch.Net.5.0.0\lib\net46\Elasticsearch.Net.dll</HintPath>
     </Reference>
+    <Reference Include="itextsharp, Version=5.5.10.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\packages\iTextSharp.5.5.10\lib\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeAnalysis, Version=1.3.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeAnalysis.Common.1.3.2\lib\net45\Microsoft.CodeAnalysis.dll</HintPath>
       <Private>True</Private>
@@ -182,6 +185,7 @@
     <Compile Include="Configuration\ElasticSearch.cs" />
     <Compile Include="Configuration\IStreamFactory.cs" />
     <Compile Include="Configuration\Settings.cs" />
+    <Compile Include="Contracts\MetaTypes.cs" />
     <Compile Include="DataModel\Code\FieldDescriptor.cs" />
     <Compile Include="DataModel\Code\Interefaces.cs" />
     <Compile Include="DataModel\Code\MethodDescriptor.cs" />
@@ -222,6 +226,8 @@
     <Compile Include="Extractors\Tika\IndexExtractionException.cs" />
     <Compile Include="Extractors\Tika\ITikaServer.cs" />
     <Compile Include="Extractors\Tika\TikaServer.cs" />
+    <Compile Include="Tagging\TagDescriptor.cs" />
+    <Compile Include="Tagging\Tagger.cs" />
     <Compile Include="Utils\Async\AggregatingProgressReporter.cs" />
     <Compile Include="Utils\Async\AsyncLazy.cs" />
     <Compile Include="Utils\Async\AsyncLock.cs" />
