--- a/Test/DesktopSearch.PS.Tests/DesktopSearch.PS.Tests.csproj
+++ b/Test/DesktopSearch.PS.Tests/DesktopSearch.PS.Tests.csproj
@@ -73,6 +73,7 @@
       <HintPath>..\..\packages\PowershellTesting.0.4.0\lib\net451\PowershellTesting.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.AppContext, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.AppContext.4.3.0\lib\net46\System.AppContext.dll</HintPath>
@@ -194,6 +195,7 @@
     <Compile Include="AddDSFoldersToIndexCmdletTests.cs" />
     <Compile Include="Composition\ContainerAccessTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\TaggingDialogTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -208,6 +210,10 @@
     <Analyzer Include="..\..\packages\Microsoft.CodeAnalysis.Analyzers.1.1.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\DesktopSearch.Core\DesktopSearch.Core.csproj">
+      <Project>{35a50b24-bcd2-48cb-8472-f27eba1073c3}</Project>
+      <Name>DesktopSearch.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\DesktopSearch.PS\DesktopSearch.PS.csproj">
       <Project>{17e0af0f-ea0f-459c-8f91-a50622ec380a}</Project>
       <Name>DesktopSearch.PS</Name>
