--- a/DesktopSearch.PS/packages.config
+++ b/DesktopSearch.PS/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="DotNetProjects.Wpf.Toolkit" version="5.0.33" targetFramework="net461" />
   <package id="Elasticsearch.Net" version="5.0.0" targetFramework="net461" />
+  <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.2" targetFramework="net461" />
