--- a/DesktopSearch.PS/DesktopSearch.PS.csproj
+++ b/DesktopSearch.PS/DesktopSearch.PS.csproj
@@ -294,6 +294,7 @@
     <Compile Include="Cmdlets\GetDSSettingJSONCmdlet.cs" />
     <Compile Include="Cmdlets\GetDSSettingCmdlet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Behaviors\CloseWindowBehavior.cs" />
     <Compile Include="UI\DialogFactory.cs" />
     <Compile Include="UI\Keyword.cs" />
     <Compile Include="UI\KeywordView.xaml.cs">
