--- a/DesktopSearch.PS/DesktopSearch.PS.csproj
+++ b/DesktopSearch.PS/DesktopSearch.PS.csproj
@@ -115,6 +115,7 @@
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.Language.Intellisense, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Win32.Primitives, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Win32.Primitives.4.3.0\lib\net46\Microsoft.Win32.Primitives.dll</HintPath>
       <Private>True</Private>
@@ -296,6 +297,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\Behaviors\CloseWindowBehavior.cs" />
     <Compile Include="UI\DialogFactory.cs" />
+    <Compile Include="Services\IKeywordSuggestions.cs" />
     <Compile Include="UI\Keyword.cs" />
     <Compile Include="UI\KeywordView.xaml.cs">
       <DependentUpon>KeywordView.xaml</DependentUpon>
@@ -327,6 +329,7 @@
     <None Include="Docs\Sync-DSIndex.md" />
     <None Include="packages.config" />
     <None Include="Readme.md" />
+    <None Include="UI\Todo.md" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.1.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
