DocType concept (one PS Cmdlet not compiling!)

--- a/DesktopSearch.Core/DesktopSearch.Core.csproj
+++ b/DesktopSearch.Core/DesktopSearch.Core.csproj
@@ -194,6 +194,8 @@
     <Compile Include="Configuration\CodeSearch.cs" />
     <Compile Include="Configuration\ConfigAccess.cs" />
     <Compile Include="Configuration\ConfigBootstrapping.cs" />
+    <Compile Include="DataModel\Documents\Folder.cs" />
+    <Compile Include="DataModel\Documents\DocType.cs" />
     <Compile Include="Configuration\DocumentSearch.cs" />
     <Compile Include="Configuration\ElasticSearchConfig.cs" />
     <Compile Include="Configuration\Providers\IStreamFactory.cs" />
@@ -209,6 +211,8 @@
     <Compile Include="ElasticSearch\CustomIDescriptorConverter.cs" />
     <Compile Include="ElasticSearch\Documents\Processor.cs" />
     <Compile Include="ElasticSearch\ManagementService.cs" />
+    <Compile Include="Services\DocTypeRepository.cs" />
+    <Compile Include="Services\IDocTypeRepository.cs" />
     <Compile Include="Services\ISearchService.cs" />
     <Compile Include="Services\SearchService.cs" />
     <Compile Include="Extractors\CodeExtractorSelector.cs" />
