--- a/DesktopSearch.Core/packages.config
+++ b/DesktopSearch.Core/packages.config
@@ -1,26 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Elasticsearch.Net" version="5.0.0" targetFramework="net461" />
+  <package id="ICU4NET-ICU4C55.1-bin32" version="1.0.0" targetFramework="net461" />
   <package id="iTextSharp" version="5.5.10" targetFramework="net461" />
+  <package id="Lucene.Net" version="4.8.0.770-beta" targetFramework="net461" />
+  <package id="Lucene.Net.Analysis.Common" version="4.8.0.770-beta" targetFramework="net461" />
+  <package id="Lucene.Net.Queries" version="4.8.0.770-beta" targetFramework="net461" />
+  <package id="Lucene.Net.QueryParser" version="4.8.0.770-beta" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.2" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NEST" version="5.0.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="SimpleInjector" version="3.3.2" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.3.0" targetFramework="net461" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net461" />
+  <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="net461" />
   <package id="System.Console" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net461" />
