--- a/Test/DesktopSearch.Core.Tests/DesktopSearch.Core.Tests.csproj
+++ b/Test/DesktopSearch.Core.Tests/DesktopSearch.Core.Tests.csproj
@@ -66,6 +66,9 @@
       <HintPath>..\..\packages\Microsoft.Extensions.Logging.Abstractions.1.1.0\lib\netstandard1.1\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Extensions.Options, Version=1.1.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Extensions.Options.1.1.0\lib\netstandard1.0\Microsoft.Extensions.Options.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Extensions.Primitives, Version=1.1.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.Extensions.Primitives.1.1.0\lib\netstandard1.0\Microsoft.Extensions.Primitives.dll</HintPath>
     </Reference>
@@ -240,6 +243,7 @@
     <Compile Include="Services\DocumentCollectionRepository_Persistence_Tests.cs" />
     <Compile Include="Services\DocumentCollectionRepository_Tests.cs" />
     <Compile Include="Services\MockStore.cs" />
+    <Compile Include="Utils\OptionsProvider.cs" />
     <Compile Include="Tagging\TagDescriptorTests.cs" />
     <Compile Include="TestDefinitions.cs" />
     <Compile Include="Tika\TikaServerExtractorTests.cs" />
