--- a/Test/DesktopSearch.Core.Tests/packages.config
+++ b/Test/DesktopSearch.Core.Tests/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
