--- a/Test/DesktopSearch.PS.Tests/packages.config
+++ b/Test/DesktopSearch.PS.Tests/packages.config
@@ -5,7 +5,10 @@
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.2" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Debug" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NEST" version="5.0.0" targetFramework="net461" />
@@ -18,6 +21,7 @@
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.3.0" targetFramework="net461" />
+  <package id="System.ComponentModel" version="4.3.0" targetFramework="net461" />
   <package id="System.Console" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net461" />
