--- a/Test/DesktopSearch.Core.Tests/packages.config
+++ b/Test/DesktopSearch.Core.Tests/packages.config
@@ -29,6 +29,7 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Nito.AsyncEx" version="4.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.5.0" targetFramework="net461" />
+  <package id="SimpleInjector" version="3.3.2" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
