--- a/Test/DesktopSearch.Core.Tests/packages.config
+++ b/Test/DesktopSearch.Core.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
+  <package id="CompareNETObjects" version="3.06.0.0" targetFramework="net461" />
   <package id="Elasticsearch.Net" version="5.0.0" targetFramework="net461" />
   <package id="ICU4NET-ICU4C55.1-bin32" version="1.0.0" targetFramework="net461" />
   <package id="Lucene.Net" version="4.8.0.770-beta" targetFramework="net461" />
