--- a/DesktopSearch.PS/DesktopSearch.PS.csproj
+++ b/DesktopSearch.PS/DesktopSearch.PS.csproj
@@ -287,7 +287,8 @@
     <Compile Include="Cmdlets\AddDSDocumentCollectionCmdlet.cs" />
     <Compile Include="Cmdlets\AddDSFolderToDocumentCollectionCmdlet.cs" />
     <Compile Include="Cmdlets\EditTagCmdlet.cs" />
-    <Compile Include="Cmdlets\GetDSDocumentCollection.cs" />
+    <Compile Include="Cmdlets\GetDSDocumentCollectionCmdlet.cs" />
+    <Compile Include="Cmdlets\GetDSStatisticsCmdlet.cs" />
     <Compile Include="Cmdlets\GetTikaExtractCmdlet.cs" />
     <Compile Include="Cmdlets\GetTikaExtractRawCmdlet.cs" />
     <Compile Include="Cmdlets\ImportDSContentCmdlet.cs" />
