--- a/DesktopSearch.Core/DesktopSearch.Core.csproj
+++ b/DesktopSearch.Core/DesktopSearch.Core.csproj
@@ -277,6 +277,9 @@
     <Compile Include="ElasticSearch\ManagementService.cs" />
     <Compile Include="IFolderProcessor.cs" />
     <Compile Include="DependencyInjection\OptionsConfigurationExt.cs" />
+    <Compile Include="Lucene\Analyzers\CamelCaseAnalyzer.cs" />
+    <Compile Include="Lucene\Analyzers\CamelCaseTokenizer.cs" />
+    <Compile Include="Lucene\Analyzers\ConsecutiveCharTokenizer.cs" />
     <Compile Include="Lucene\Analyzers\LowercaseKeywordAnalyzer.cs" />
     <Compile Include="Lucene\Analyzers\RepositoryNamesAnalyzer.cs" />
     <Compile Include="Lucene\CodeIndex.cs" />
