Performance Tests and Counters

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ Test/DesktopSearch.Core.Tests/Bin
 Test/DesktopSearch.Core.Tests/Obj
 Test/DesktopSearch.PS.Tests/Bin
 Test/DesktopSearch.PS.Tests/Obj
+RegisterPerformanceCounters/bin
+RegisterPerformanceCounters/obj
+ServiceFabric/bin
 
 elasticsearch-*
 packages
