--- a/Test/DesktopSearch.Core.Tests/DesktopSearch.Core.Tests.csproj
+++ b/Test/DesktopSearch.Core.Tests/DesktopSearch.Core.Tests.csproj
@@ -276,12 +276,14 @@
     <Compile Include="IndexExtractors\Roslyn\RoslynParser_DefinedTypes_Tests.cs" />
     <Compile Include="Lucene\CamelCaseTokenizingTests.cs" />
     <None Include="Lucene\ConsecutiveCharTokenizer.cs" />
+    <Compile Include="Lucene\CodeFolderProcessorTests.cs" />
     <Compile Include="Lucene\CodeIndexTests.cs" />
     <Compile Include="Lucene\LucenePrototypingTests.cs" />
     <Compile Include="Processors\DocumentFolderProcessorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DocumentCollectionConfigStoreTests.cs" />
     <Compile Include="Utils\CfgMocks.cs" />
+    <Compile Include="Utils\EnumExtTests.cs" />
     <Compile Include="Utils\CollectionExtensionsTests.cs" />
     <Compile Include="Utils\TestDirectoryProvider.cs" />
     <None Include="app.config" />
